<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_days_menu"
    tools:context=".ui.order.ChooseLunchFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#F3E1BC"
        android:text="@string/Monday"
        android:textColor="#5D4037"
        app:layout_constraintStart_toStartOf="@id/imageView2"
        app:layout_constraintTop_toBottomOf="@id/imageView2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="#F3E1BC"
        android:text="@string/Tuesday"
        android:textColor="#5D4037"
        app:layout_constraintStart_toStartOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="#F3E1BC"
        android:text="@string/Wednesday"
        android:textColor="#5D4037"
        app:layout_constraintStart_toStartOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@id/button3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="290dp"
        android:layout_height="392dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#FFC107"
        android:contentDescription="@string/Image"
        android:src="@drawable/imagen_app__10_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="#F3E1BC"
        android:text="@string/Thursday"
        android:textColor="#5D4037"
        app:layout_constraintStart_toStartOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="#F3E1BC"
        android:text="@string/Friday"
        android:textColor="#5D4037"
        app:layout_constraintStart_toStartOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button5" />


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>



