<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.order.FridayResumeFragment">



    <data>
        <variable
            name="viewModel"
            type="com.example.lunchtray.model.OrderViewModel" />

        <!-- TODO: Add the data binding variable for the FridayResumeFragment -->

        <variable
            name="fridayResumeFragment"
            type="com.example.lunchtray.ui.order.FridayResumeFragment" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/side_margin">

            <TextView
                android:id="@+id/friday_resume"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Label"
                android:text="@string/friday_resume"
                android:textColor="#d32f2f"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                android:id="@+id/divider4"
                style="@style/Widget.LunchTray.Divider"
                android:layout_marginBottom="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/friday_resume"/>

            <TextView
                android:id="@+id/friday_lunch_menu"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Label"
                android:text="@string/friday_lunch_menu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider4"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="#000051"/>


            <TextView
                android:id="@+id/lunch_selection_menu"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/friday_lunch_menu"
                android:text="@{viewModel.menulunch.name}"
                tools:text="Cauliflower" />
            <View
                android:id="@+id/divider5"
                style="@style/Widget.LunchTray.Divider"
                android:layout_marginBottom="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lunch_selection_menu"/>

            <TextView
                android:id="@+id/friday_dinner_menu"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Label"
                android:text="@string/friday_dinner_menu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider5"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="#000051"/>
            <TextView
                android:id="@+id/dinner_selection_menu"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/friday_dinner_menu"
                android:text="@{viewModel.menudinner.name}"
                tools:text="Cauliflower" />


            <View
                android:id="@+id/divider3"
                style="@style/Widget.LunchTray.Divider"
                android:layout_marginBottom="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dinner_selection_menu"/>


            <TextView
                android:id="@+id/monday_lunch"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Label"
                android:text="@string/ingredients_lunch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider3"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="#000051"/>

            <TextView
                android:id="@+id/lunch_selection"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/monday_lunch"
                android:text="@{viewModel.menulunch.description}"
                tools:text="Cauliflower" />

            <View
                android:id="@+id/divider1"
                style="@style/Widget.LunchTray.Divider"
                android:layout_marginBottom="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lunch_selection" />

            <TextView
                android:id="@+id/monday_dinner"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Label"
                android:text="@string/ingredients_dinner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider1"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="#000051"/>

            <TextView
                android:id="@+id/dinner_selection"
                style="@style/Widget.LunchTray.TextView.CheckoutItem.Info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/monday_dinner"
                android:text="@{viewModel.menudinner.description}"
                tools:text="Spicy Potatoes" />


            <View
                android:id="@+id/divider2"
                style="@style/Widget.LunchTray.Divider"
                android:layout_marginBottom="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dinner_selection" />

            <Button
                android:id="@+id/submit_button"
                android:onClick='@{() -> fridayResumeFragment.sendOrder()}'
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:text="@string/send_list"
                android:backgroundTint="#F3E1BC"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2"
                android:textColor="#000000"/>


            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:onClick='@{() -> fridayResumeFragment.cancelOrder()}'
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/base_margin"
                android:text="@string/cancel"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/submit_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>